--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@dirtycajunrice/hardhat-template",
+  "name": "kortstrid-contracts",
   "version": "1.0.0",
-  "description": "Contract repository for %%PROJECT_NAME%%",
-  "author": "DirtyCajunRice",
+  "description": "Contract repository for kortstrid",
+  "author": "kortstrid",
   "license": "GPL-V3",
   "type": "module",
-  "repository": "dirtycajunrice/hardhat-template",
+  "repository": "kortstrid/contracts",
   "dependencies": {
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
