--- a/.gitignore
+++ b/.gitignore
@@ -103,17 +103,22 @@ dist
 # TernJS port file
 .tern-port
 
+# jetbrains
 .idea/
+
+# hardhat
+artifacts
+!artifacts/
+artifacts/*
+!artifacts/contracts/
 
 *.dbg.json
 
 yarn.lock
 package-lock.json
 cache/
-artifacts/@openzeppelin/
-artifacts/build-info/
+
 reference
-/artifacts/@chainlink/
 /scripts/metadata
 /scripts/data
 /scripts/adhoc.js
